# slurs

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: anchor_events.json  gdelt_queries.json  sketch_croatian.json  slurs_terms.json  trends_event_windows.json  wiki_pageviews.json
docs/: PIPELINE.md  TRENDS_SPIKE_SUMMARY.md
output/: HANDOFF_execute_without_bigquery.md  eventregistry_snapshot.csv  how_to_get_data_around_days.md  methodology_diagrams.md  presentation_metrics.csv  presentation_report.md  trends_spike_summary.csv
pipeline/: __init__.py  api_app.py  batch_eventregistry.py  batch_sketch.py  cli.py  config.py  refresh_output.py  summarize.py  wiki_batch.py
pipeline/ingest/: __init__.py  eventregistry.py  gdelt.py  google_trends.py  sketchengine.py  wikipedia.py
sources/STAL 2026/: STAL 2026 prijava.docx  Slurs and Polarization (2) (5) (3).docx  prijedlog.md
tests/: test_batch_config.py  test_batch_sketch.py  test_config.py  test_er_skip_no_key.py  test_eventregistry_table.py  test_gdelt_presentation.py  test_refresh_output.py  test_sketch_cql.py  test_trends_config.py  test_trends_ratio.py
